# Fly-in

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
maps/custom/: test1.txt
maps/error/: connection_bad_syntax.txt  coordinates_duplicated.txt  zone_metadata_too_much_tags.txt
src/: __init__.py  __main__.py
src/maps_parser/: __init__.py  menu.py  parser.py
src/object/: __init__.py  drones.py  zone.py
src/object/utils/: __init__.py  type.py
src/simulation/: launch.py  manager.py
src/utils/: __init__.py  css3_colors.py  custom_errors.py  module_checker.py  ui.py
